mlde: final WiP
Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/demos/mlde/01.create-vectorstore.ipynb
+++ b/demos/mlde/01.create-vectorstore.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "In this Jupyter Notebook, you explore a foundational element of a question-answering system: the Vector Store. The\n",
     "Vector Store serves as the key component that allows you to efficiently retrieve relevant context from a corpus of\n",
-    "documents based on a user's query.\n",
+    "documents based on a user's query, providing the backbone of the information retrieval system.\n",
     "\n",
     "<figure>\n",
     "  <img src=\"images/documents.jpg\" alt=\"documents\" style=\"width:100%\">\n",
@@ -20,11 +20,11 @@
     "  </figcaption>\n",
     "</figure>\n",
     "\n",
-    "The approach you employ involves transforming each document in the corpus into a high-dimensional numerical\n",
-    "representation known as an \"embedding\", using a fine-tuned Transformer model. This process is sometimes referred to as\n",
-    "\"embedding\" the document in a latent space. The latent space here is a high-dimensional space where similar documents\n",
-    "are close to each other. The position of a document in this space is determined by the content and the semantic meaning\n",
-    "it carries.\n",
+    "The approach you employ involves transforming each document into a high-dimensional numerical\n",
+    "representation known as an \"embedding\", using a fine-tuned [BGE-M3](https://arxiv.org/abs/2402.03216) embeddings model.\n",
+    "This process is sometimes referred to as \"embedding\" the document in a latent space. The latent space here is a\n",
+    "high-dimensional space where similar documents are close to each other. The position of a document in this space is\n",
+    "determined by the content and the semantic meaning it carries.\n",
     "\n",
     "Once you have these embeddings, you store them in a Vector Store. A Vector Store is an advanced AI-native database\n",
     "designed to hold these high-dimensional vectors and provide efficient search capabilities. This enables you to quickly\n",
@@ -32,7 +32,7 @@
     "vector in the same latent space.\n",
     "\n",
     "The following cells in this Notebook guides you through the process of creating such a Vector Store. You start by\n",
-    "generating embeddings for each document, then you move on to storing these embeddings in a Vector Store and finally,\n",
+    "generating embeddings for each document, then you move on to storing these embeddings in a Vector Store, and finally,\n",
     "you see how easy it is to to retrieve documents from the Vector Store based on a query.\n",
     "\n",
     "## Table of Contents\n",
@@ -57,9 +57,9 @@
     "import glob\n",
     "\n",
     "from tqdm import tqdm\n",
-    "from langchain.vectorstores import Chroma\n",
-    "from langchain.document_loaders import TextLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "from langchain_community.vectorstores import Chroma\n",
+    "from langchain_community.document_loaders import JSONLoader\n",
     "from chromadb.config import Settings\n",
     "\n",
     "from embeddings import EmbeddingsModel"
@@ -72,19 +72,21 @@
    "source": [
     "# Download the Embeddings Model\n",
     "\n",
-    "The initial step in this process involves downloading the fine-tuned embeddings model. Ensure to store it in the shared directory. This is a vital step, as you will require the model later during its deployment with KServe.\n",
+    "The initial step in this process involves downloading the fine-tuned embeddings model. Ensure to store it in the current directory. This is a vital step, as you will require the model to both create the Vector Store and deploy it for inference with KServe.\n",
     "\n",
     "* Launch a terminal window.\n",
-    "* Navigate to the shared directory (i.e., `/mnt/shared`).\n",
+    "* Navigate to the demo's directory (e.g., `ezua-tutorials/demos/mlde`).\n",
     "* Run the following commands:\n",
     "\n",
     "    ```\n",
-    "    git lfs install\n",
-    "    git clone https://huggingface.co/Muennighoff/SGPT-125M-mean-nli\n",
+    "    mkdir bge-m3 && cd bge-m3\n",
+    "    wget https://ezmeral-artifacts.s3.us-east-2.amazonaws.com/bge-m3.tar.gz\n",
+    "    tar xzf bge-m3.tar.gz\n",
+    "    rm bge-m3.tar.gz\n",
     "    ```\n",
     "    \n",
     "> If you are behind a proxy, do not forget to set your `https_proxy` and `HTTPS_PROXY` environment\n",
-    "  variables. Depending on your internet connection this step may take up to 5 minutes to complete."
+    "  variables. Depending on your internet connection this step may take a few minutes to complete."
    ]
   },
   {
@@ -96,63 +98,61 @@
    "source": [
     "# Load the Documents\n",
     "\n",
-    "The next cells contain a set of helper functions designed to load text documents from a specified directory. These\n",
+    "The next cells contain a set of helper functions designed to load JSON documents from a specified directory. These\n",
     "functions are essential for preparing your data before embedding it into the high-dimensional latent space.\n",
     "\n",
-    "The key operations performed by these functions are:\n",
-    "\n",
-    "- Directory Scanning: Scan the specified directory for all `.txt` files recursively.\n",
-    "- Document Loading: Load the file in LangChain `Document` object, using the provided `TextLoader` object.\n",
-    "\n",
-    "By running this cell, you have a list of documents ready to be processed and embedded in the latent space. This forms\n",
-    "your corpus."
+    "By running the following cells, you have a list of documents ready to be processed and embedded in the latent space.\n",
+    "This forms your corpus."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cc826f3-6670-4fbd-87a9-ef4e67c6f30f",
-   "metadata": {
-    "tags": []
-   },
+   "id": "ab41fcf7-9e8c-4198-9552-da1d23dd3013",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def load_doc(fn):\n",
-    "    loader = TextLoader(fn)\n",
-    "    doc = loader.load()\n",
-    "    return doc"
+    "docs = []"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bafbff81-1b65-41fb-9d65-a26e88779d37",
-   "metadata": {
-    "tags": []
-   },
+   "id": "4a1a5db7-b689-437e-b756-60ed7afc2f71",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def load_docs(source_dir: str) -> list:\n",
-    "    \"\"\"Load all documents in a the given directory.\"\"\"\n",
-    "    fns = glob.glob(os.path.join(source_dir, \"*.txt\"))\n",
-    "    \n",
-    "    docs = []\n",
-    "    for i, fn in enumerate(tqdm(fns, desc=\"Loading documents...\")):\n",
-    "        docs.extend(load_doc(fn))\n",
+    "ezua_loader = JSONLoader(\n",
+    "    file_path='./documents/EzUA.json',\n",
+    "    jq_schema='.[].content',\n",
+    "    text_content=False)\n",
     "\n",
-    "    return docs"
+    "ezua_data = ezua_loader.load()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac3ce613-1f5a-428b-a20f-c2d83c46c40d",
-   "metadata": {
-    "tags": []
-   },
+   "id": "2f951948-8459-48e1-8187-1ba5b8a4141d",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "docs = load_docs(\"documents\")"
+    "ezdf_loader = JSONLoader(\n",
+    "    file_path='./documents/EzDF.json',\n",
+    "    jq_schema='.[].content',\n",
+    "    text_content=False)\n",
+    "\n",
+    "ezdf_data = ezdf_loader.load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8683547-5a20-4fda-8e54-47ce46a776fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docs = ezua_data + ezdf_data"
    ]
   },
   {
@@ -188,7 +188,7 @@
     "    texts = text_splitter.split_documents(docs)\n",
     "    return texts\n",
     "\n",
-    "texts = process_docs(docs, chunk_size=500, chunk_overlap=0)"
+    "texts = process_docs(docs, chunk_size=500, chunk_overlap=100)"
    ]
   },
   {
@@ -227,7 +227,27 @@
    },
    "outputs": [],
    "source": [
-    "db = Chroma.from_documents(texts, embeddings, persist_directory=f\"{os.getcwd()}/db\")\n",
+    "db = Chroma(embedding_function=embeddings, persist_directory=f\"{os.getcwd()}/db\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5478dcc-9ba9-444e-9c0d-1373ece594b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for text in tqdm(texts):\n",
+    "    db.add_documents([text])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02faf0fb-f000-4696-a651-b621527621e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "db.persist()"
    ]
   },
@@ -251,7 +271,7 @@
    },
    "outputs": [],
    "source": [
-    "query = \"How can I create a cgroup?\"\n",
+    "query = \"How can I get started with HPE Ezmeral Unified Anaytics?\"\n",
     "matches = db.similarity_search(query); matches"
    ]
   },
@@ -264,16 +284,16 @@
    "source": [
     "# Conclusion and Next Steps\n",
     "\n",
-    "Congratulations! You have successfully traversed the journey of embedding documents into a high-dimensional latent space\n",
-    "and storing these embeddings in a Vector Store. By accomplishing this, you've transformed unstructured text data into a\n",
+    "Congratulations! You have successfully embedded your documents into a high-dimensional latent space\n",
+    "and stored these embeddings in a Vector Store. By accomplishing this, you've transformed unstructured text data into a\n",
     "structured form that can power a robust question-answering system.\n",
     "\n",
     "However, your journey doesn't end here. Now that you have the Vector Store ready, the next step is to create an\n",
     "Inference Service (ISVC) that can leverage this store to provide context to user queries. For this, you use KServe, a\n",
     "flexible, cloud-native platform for serving Machine Learning models.\n",
     "\n",
-    "In the next Notebook, you set up a custom ISVC using KServe. This service uses the Vector Store to retrieve and rank\n",
-    "relevant document chunks based on a user's query, providing accurate and efficient context to an LLM!"
+    "In the next Notebook, you will configure two ISVCs: a custom ISVC using KServe to deploy the Chroma Database, and\n",
+    "another one backed by with the Triton Inference Service to facilitate the embeddings model connection."
    ]
   }
  ],
