--- a/demos/mlde/02.serve-vectorstore.ipynb
+++ b/demos/mlde/02.serve-vectorstore.ipynb
@@ -10,7 +10,7 @@
     "# Creating an Inference Service using MLFlow and KServe\n",
     "\n",
     "Welcome to part two of the tutorial on building a question-answering application over a private document corpus with\n",
-    "Large Language Models (LLMs). In the previous Notebook, you transformed the documents into a high-dimensional latent\n",
+    "Large Language Models (LLMs). In the previous Notebook, you embedded the documents into a high-dimensional latent\n",
     "space and saved these embeddings in a Vector Store using the Chroma database interface from LangChain.\n",
     "\n",
     "<figure>\n",
@@ -21,7 +21,7 @@
     "</figure>\n",
     "\n",
     "In this Notebook, you delve deeper. You use MLflow to log the Chroma DB files as experiment artifacts. Once logged, you\n",
-    "then set up an Inference Service (ISVC) that fetches these artifacts and leverages them to provide context to user\n",
+    "set up an Inference Service (ISVC) that fetches these artifacts and leverages them to provide context to user\n",
     "inquiries. For this task, you work with KServe, a Kubernetes-centric platform that offers a serverless blueprint for\n",
     "scaling Machine Learning (ML) models seamlessly.\n",
     "\n",
@@ -29,7 +29,11 @@
     "predictor component. This involves creating a Docker image, which then serves as your ISVC endpoint. This approach\n",
     "grants you a high level of customization, ensuring the service fits your requirements. You can find the necessary code\n",
     "and the Dockerfile for this custom predictor in the `dockerfiles/vectorstore` directory. But for a quicker setup,\n",
-    "there's a pre-built option available: `dpoulopoulos/qna-vectorstore:v0.1.0`.\n",
+    "there's a pre-built option available: `dpoulopoulos/qna-vectorstore-mlde:v0.1.0`.\n",
+    "\n",
+    "Lastly, you must also deploy the embeddings model. You can accomplish this using KServe with the Triton Inference Service\n",
+    "backend. Triton requires the `model-repository` directory to be organized in a specific manner, which we will discuss in\n",
+    "more detail later.\n",
     "\n",
     "## Table of Contents\n",
     "\n",
@@ -40,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e22867e3-a69c-488a-819e-cced462be9e3",
    "metadata": {
     "tags": []
@@ -52,8 +56,10 @@
     "import getpass\n",
     "import requests\n",
     "import subprocess\n",
+    "import mlflow\n",
+    "import ipywidgets as widgets\n",
     "\n",
-    "import mlflow"
+    "from IPython.display import display"
    ]
   },
   {
@@ -79,46 +85,47 @@
    "source": [
     "# Logging the Vector Store as an Artifact\n",
     "\n",
-    "To begin, you create a new experiment or utilize an existing one and log the Chroma DB files as an artifact of this\n",
+    "To begin, you create a new experiment or use an existing one and log the Chroma DB files as an artifact of this\n",
     "experiment. Ultimately, you retrieve the URI that points to this artifact's location and provide it to the custom\n",
-    "predictor component. By doing this, the custom predictor component understands how to fetch the artifact and serve it\n",
+    "predictor component. By doing this, the custom predictor component knows how to fetch the artifact and serve it\n",
     "effectively."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "27118610-6f87-4bae-ac1d-efbf0b24b6ae",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "MLflow Username:  admin\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mlflow_username = input(\"MLflow Username: \")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "b13e5c87-b34a-4f4c-9aca-e685a1c37b4c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "MLflow Password:  ·····\n"
-     ]
-    }
-   ],
-   "source": [
-    "mlflow_password = getpass.getpass(\"MLflow Password: \")"
+    "# Add heading\n",
+    "heading = widgets.HTML(\"<h2>MLflow Credentials</h2>\")\n",
+    "display(heading)\n",
+    "\n",
+    "username_input = widgets.Text(description='Username:')\n",
+    "password_input = widgets.Password(description='Password:')\n",
+    "submit_button = widgets.Button(description='Submit')\n",
+    "success_message = widgets.Output()\n",
+    "\n",
+    "mlflow_username = None\n",
+    "mlflow_password = None\n",
+    "\n",
+    "def submit_button_clicked(b):\n",
+    "    global mlflow_username, mlflow_password\n",
+    "    mlflow_username = username_input.value\n",
+    "    mlflow_password = password_input.value\n",
+    "    with success_message:\n",
+    "        success_message.clear_output()\n",
+    "        print(\"Credentials submitted successfully!\")\n",
+    "    submit_button.disabled = True\n",
+    "\n",
+    "submit_button.on_click(submit_button_clicked)\n",
+    "\n",
+    "# Set margin on the submit button\n",
+    "submit_button.layout.margin = '20px 0 20px 0'\n",
+    "\n",
+    "# Display inputs and button\n",
+    "display(username_input, password_input, submit_button, success_message)"
    ]
   },
   {
@@ -131,8 +138,8 @@
     "token_url = f\"https://keycloak.i001ua.tryezmeral.com/realms/UA/protocol/openid-connect/token\"\n",
     "\n",
     "data = {\n",
-    "    \"username\" : \"admin\",\n",
-    "    \"password\" : \"admin\",\n",
+    "    \"username\" : mlflow_username,\n",
+    "    \"password\" : mlflow_password,\n",
     "    \"grant_type\" : \"password\",\n",
     "    \"client_id\" : \"ua-grant\",\n",
     "}\n",
@@ -155,7 +162,8 @@
     "os.environ[\"AWS_ENDPOINT_URL\"] = 'http://local-s3-service.ezdata-system.svc.cluster.local:30000'\n",
     "os.environ[\"MLFLOW_S3_ENDPOINT_URL\"] = os.environ[\"AWS_ENDPOINT_URL\"]\n",
     "os.environ[\"MLFLOW_S3_IGNORE_TLS\"] = \"true\"\n",
-    "os.environ[\"MLFLOW_TRACKING_INSECURE_TLS\"] = \"true\""
+    "os.environ[\"MLFLOW_TRACKING_INSECURE_TLS\"] = \"true\"\n",
+    "os.environ[\"MLFLOW_TRACKING_URI\"] = \"http://mlflow.mlflow.svc.cluster.local:5000\""
    ]
   },
   {
@@ -172,8 +180,6 @@
     "      exp_name (str): The name of the experiment.\n",
     "    \"\"\"\n",
     "    try:\n",
-    "        mlflow.set_registry_uri(\"http://mlflow.mlflow.svc.cluster.local:5000\")\n",
-    "        mlflow.set_tracking_uri(\"http://mlflow.mlflow.svc.cluster.local:5000\")\n",
     "        mlflow.set_experiment(exp_name)\n",
     "    except Exception as e:\n",
     "        raise RuntimeError(f\"Failed to set the experiment: {e}\")"
@@ -227,7 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cp -r model-repository/ /mnt/shared/model-repository"
+    "!cp -r model-repository/ /mnt/shared/"
    ]
   },
   {
@@ -252,17 +258,26 @@
     "  name: \"bge\"\n",
     "spec:\n",
     "  predictor:\n",
+    "    affinity:\n",
+    "      nodeAffinity:\n",
+    "        requiredDuringSchedulingIgnoredDuringExecution:\n",
+    "          nodeSelectorTerms:\n",
+    "          - matchExpressions:\n",
+    "            - key: \"nvidia.com/gpu.present\"\n",
+    "              operator: NotIn\n",
+    "              values:\n",
+    "              - \"true\"\n",
+    "    timeout: 600\n",
     "    triton:\n",
     "      image: dpoulopoulos/triton-inference-server:v0.1.0\n",
     "      securityContext:\n",
     "          runAsUser: 0\n",
     "      resources:\n",
     "        limits:\n",
-    "          cpu: \"1\"\n",
+    "          cpu: \"2\"\n",
     "          memory: 8Gi\n",
-    "          nvidia.com/gpu: 1\n",
     "        requests:\n",
-    "          cpu: \"1\"\n",
+    "          cpu: \"2\"\n",
     "          memory: 8Gi\n",
     "      storageUri: \"pvc://kubeflow-shared-pvc/model-repository\"\n",
     "\"\"\"\n",
@@ -296,7 +311,7 @@
     "1. Drafting the YAML Template: Here, you craft a YAML file that outlines the ISVC's specifics. This captures elements\n",
     "   like the service's name, the chosen Docker image, and additional configurations. After drafting, you save this YAML\n",
     "   to a file for inspection and later submission.\n",
-    "1. Pushing the YAML Template: With your YAML template prepped, the next step is to present it to KServe for deployment.\n",
+    "1. Applying the YAML Template: With your YAML template prepped, the next step is to present it to KServe for deployment.\n",
     "   You accomplish this by leveraging a Python subprocess to execute a shell command.\n",
     "\n",
     "By the end of this section, you will have a running ISVC that is ready to receive user queries and provide context for\n",
@@ -311,12 +326,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76be7670-5333-41ec-a79b-fa3ae88f81fe",
+   "id": "6fd164d7-7bd4-4ae7-b4c2-9e99f1a5f069",
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictor_image = (input(\"Enter the name of the predictor image (default: dpoulopoulos/qna-vectorstore:v0.1.0): \")\n",
-    "                   or \"dpoulopoulos/qna-vectorstore:v0.1.0\")"
+    "# Add heading\n",
+    "heading = widgets.HTML(\"<h2>Predictor Image</h2>\")\n",
+    "display(heading)\n",
+    "\n",
+    "predictor_image_widget = widgets.Text(\n",
+    "    description=\"Image Name:\",\n",
+    "    placeholder=\"Default: dpoulopoulos/qna-vectorstore-mlde:v0.1.0\",\n",
+    "    layout=widgets.Layout(width='30%'))\n",
+    "submit_button = widgets.Button(description=\"Submit\")\n",
+    "success_message = widgets.Output()\n",
+    "\n",
+    "predictor_image = None\n",
+    "\n",
+    "def submit_button_clicked(b):\n",
+    "    global predictor_image\n",
+    "    predictor_image = predictor_image_widget.value\n",
+    "    with success_message:\n",
+    "        success_message.clear_output()\n",
+    "        if not predictor_image:\n",
+    "            predictor_image = \"dpoulopoulos/qna-vectorstore-mlde:v0.1.0\"\n",
+    "        print(f\"The name of the predictor image will be: '{predictor_image}'\")\n",
+    "    submit_button.disabled = True\n",
+    "\n",
+    "submit_button.on_click(submit_button_clicked)\n",
+    "\n",
+    "# Set margin on the submit button\n",
+    "submit_button.layout.margin = '20px 0 20px 0'\n",
+    "\n",
+    "# Display inputs and button\n",
+    "display(predictor_image_widget, submit_button, success_message)"
    ]
   },
   {
@@ -345,10 +388,20 @@
     "  name: vectorstore\n",
     "spec:\n",
     "  predictor:\n",
+    "    affinity:\n",
+    "      nodeAffinity:\n",
+    "        requiredDuringSchedulingIgnoredDuringExecution:\n",
+    "          nodeSelectorTerms:\n",
+    "          - matchExpressions:\n",
+    "            - key: \"nvidia.com/gpu.present\"\n",
+    "              operator: NotIn\n",
+    "              values:\n",
+    "              - \"true\"\n",
     "    containers:\n",
     "    - name: kserve-container\n",
     "      image: {2}\n",
     "      imagePullPolicy: Always\n",
+    "\n",
     "      resources:\n",
     "        requests:\n",
     "          memory: \"2Gi\"\n",
@@ -419,10 +472,10 @@
     "\n",
     "From here, there are two paths you can choose:\n",
     "\n",
-    "- Testing the Vector Store ISVC: If you'd like to test the Vector Store ISVC that you've just created, you can proceed\n",
+    "- **Testing the Vector Store ISVC**: If you'd like to test the Vector Store ISVC that you've just created, you can proceed\n",
     "  to the third (optional) Notebook. This Notebook provides a step-by-step guide on how to invoke the ISVC and validate\n",
     "  its performance.\n",
-    "- Creating the LLM ISVC: Alternatively, if you're ready to move on to the next stage of the project, you\n",
+    "- **Creating the LLM ISVC**: Alternatively, if you're ready to move on to the next stage of the project, you\n",
     "  can jump straight to our fourth Notebook. In this Notebook, you create an ISVC for the Large Language Model (LLM),\n",
     "  which will work in conjunction with the Vector Store ISVC to provide answers to user queries."
    ]
