demos/rag: Migrate QnA demo to UA 1.3.0
Migrate the Question-Answering demo to UA version 1.3.0:

* Switch to a base Jupyter image for the demo
* Generate new tokens via Keycloak for every request
* Use IPython Widgets where possible
* Update URLs for KServe Inference Services
* Refresh Docker images for custom KServe Inference Services
* Amend the UI Gradio application
* Upgrade dependency versions in requirements.txt
* Update the README file

Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/demos/rag-demos/question-answering/01.create-vectorstore.ipynb
+++ b/demos/rag-demos/question-answering/01.create-vectorstore.ipynb
@@ -56,11 +56,10 @@
     "import glob\n",
     "\n",
     "from tqdm import tqdm\n",
-    "from langchain.vectorstores import Chroma\n",
-    "from langchain.document_loaders import TextLoader\n",
     "from langchain.embeddings import HuggingFaceEmbeddings\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "from chromadb.config import Settings"
+    "from langchain_community.document_loaders import TextLoader\n",
+    "from langchain_community.vectorstores import Chroma"
    ]
   },
   {
@@ -194,7 +193,7 @@
    "outputs": [],
    "source": [
     "# If you're running behind a proxy, uncomment the following line and set your proxy URL.\n",
-    "# os.environ[\"https_proxy\"] = \"<your https proxy URL>\""
+    "# os.environ[\"https_proxy\"] = \"<your_https_proxy>\""
    ]
   },
   {
@@ -219,9 +218,7 @@
    },
    "outputs": [],
    "source": [
-    "settings = Settings(anonymized_telemetry=False, chroma_db_impl=\"duckdb+parquet\",  persist_directory=f\"{os.getcwd()}/db\")\n",
-    "\n",
-    "db = Chroma.from_documents(texts, embeddings, persist_directory=f\"{os.getcwd()}/db\", client_settings=settings)\n",
+    "db = Chroma.from_documents(texts, embeddings, persist_directory=f\"{os.getcwd()}/db\")\n",
     "db.persist()"
    ]
   },
@@ -273,9 +270,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "question-answering",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "question-answering"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
