--- a/demos/rag-demos/question-answering/04.serve-llm.ipynb
+++ b/demos/rag-demos/question-answering/04.serve-llm.ipynb
@@ -45,7 +45,25 @@
    },
    "outputs": [],
    "source": [
-    "import subprocess"
+    "import os\n",
+    "import subprocess\n",
+    "import ipywidgets as widgets\n",
+    "\n",
+    "from IPython.display import display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d427c712-aea0-4251-b0f3-aa9e88b42447",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If you're running behind a proxy, set set your proxy URLs below.\n",
+    "# DO NOT edit the \"NO_PROXY\" variable unless you know what you're doing!\n",
+    "os.environ[\"HTTP_PROXY\"] = \"\"\n",
+    "os.environ[\"HTTPS_PROXY\"] = \"\"\n",
+    "os.environ[\"NO_PROXY\"] = \"10.96.0.0/12, .local\"  # DO NOT edit."
    ]
   },
   {
@@ -82,8 +100,8 @@
     "source code and the Dockerfiles are provided in the corresponding folders: `dockerfiles/llm` and\n",
     "`dockerfiles/transformer`. For your convenience, you can use the images we have pre-built for you:\n",
     "\n",
-    "- Predictor: `dpoulopoulos/qna-predictor:v0.1.0`\n",
-    "- Transformer: `dpoulopoulos/qna-transformer:v0.1.0`\n",
+    "- Predictor: `dpoulopoulos/qna-llm:v1.3.0-d79aa03`\n",
+    "- Transformer: `dpoulopoulos/qna-transformer:v1.3.0-d79aa03`\n",
     "\n",
     "Once ready, proceed with the next steps.\n",
     "\n",
@@ -100,14 +118,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e3b97f1-8e6b-4181-b220-60f61f77e413",
+   "id": "72f6a66c-ce92-40c5-a70a-d0cb2e413d71",
    "metadata": {},
    "outputs": [],
    "source": [
-    "PREDICTOR_IMAGE = (input(\"Enter the name of the predictor image (default: dpoulopoulos/qna-predictor:v0.1.0): \")\n",
-    "                   or \"dpoulopoulos/qna-predictor:v0.1.0\")\n",
-    "TRANSFORMER_IMAGE = (input(\"Enter the name of the transformer image (default: dpoulopoulos/qna-transformer:v0.1.0): \")\n",
-    "                     or \"dpoulopoulos/qna-transformer:v0.1.0\")"
+    "# Add heading\n",
+    "heading = widgets.HTML(\"<h2>KServe Images</h2>\")\n",
+    "display(heading)\n",
+    "\n",
+    "predictor_image_widget = widgets.Text(\n",
+    "    description=\"Predictor Image Name:\",\n",
+    "    placeholder=\"dpoulopoulos/qna-llm:v1.3.0-d79aa03\",\n",
+    "    layout=widgets.Layout(width='30%'))\n",
+    "transformer_image_widget = widgets.Text(\n",
+    "    description=\"Transformer Image Name:\",\n",
+    "    placeholder=\"dpoulopoulos/qna-transformer:v1.3.0-d79aa03\",\n",
+    "    layout=widgets.Layout(width='30%'))\n",
+    "submit_button = widgets.Button(description=\"Submit\")\n",
+    "success_message = widgets.Output()\n",
+    "\n",
+    "predictor_image = None\n",
+    "transformer_image = None\n",
+    "\n",
+    "def submit_button_clicked(b):\n",
+    "    global predictor_image, transformer_image\n",
+    "    predictor_image = predictor_image_widget.value\n",
+    "    transformer_image = transformer_image_widget.value\n",
+    "    with success_message:\n",
+    "        success_message.clear_output()\n",
+    "        if not predictor_image:\n",
+    "            predictor_image = \"dpoulopoulos/qna-llm:v1.3.0-d79aa03\"\n",
+    "        print(f\"The name of the predictor image will be: '{predictor_image}'\")\n",
+    "        if not transformer_image:\n",
+    "            transformer_image = \"dpoulopoulos/qna-transformer:v1.3.0-d79aa03\"\n",
+    "        print(f\"The name of the transformer image will be: '{predictor_image}'\")\n",
+    "    submit_button.disabled = True\n",
+    "\n",
+    "submit_button.on_click(submit_button_clicked)\n",
+    "\n",
+    "# Set margin on the submit button\n",
+    "submit_button.layout.margin = '20px 0 20px 0'\n",
+    "\n",
+    "# Display inputs and button\n",
+    "display(predictor_image_widget, transformer_image_widget, submit_button, success_message)"
    ]
   },
   {
@@ -132,13 +185,13 @@
     "        image: {0}\n",
     "        imagePullPolicy: Always\n",
     "        # If you are running behind a proxy, uncomment the following lines and replace the values with your proxy URLs.\n",
-    "        # env:\n",
-    "        # - name: HTTP_PROXY\n",
-    "        #   value: <your http proxy URL>\n",
-    "        # - name: HTTPS_PROXY\n",
-    "        #   value: <your https proxy URL>\n",
-    "        # - name: NO_PROXY\n",
-    "        #   value: .local\n",
+    "        env:\n",
+    "        - name: HTTP_PROXY\n",
+    "          value: {1}\n",
+    "        - name: HTTPS_PROXY\n",
+    "          value: {2}\n",
+    "        - name: NO_PROXY\n",
+    "          value: .local\n",
     "        resources:\n",
     "          requests:\n",
     "            memory: \"8Gi\"\n",
@@ -149,7 +202,7 @@
     "  transformer:\n",
     "    timeout: 600\n",
     "    containers:\n",
-    "      - image: {1}\n",
+    "      - image: {3}\n",
     "        imagePullPolicy: Always\n",
     "        resources:\n",
     "          requests:\n",
@@ -160,8 +213,10 @@
     "            cpu: \"500m\"\n",
     "        name: kserve-container\n",
     "        args: [\"--use_ssl\"]\n",
-    "\"\"\".format(PREDICTOR_IMAGE,\n",
-    "           TRANSFORMER_IMAGE)\n",
+    "\"\"\".format(predictor_image,\n",
+    "           os.environ[\"HTTP_PROXY\"],\n",
+    "           os.environ[\"HTTPS_PROXY\"],\n",
+    "           transformer_image)\n",
     "\n",
     "with open(\"llm-isvc.yaml\", \"w\") as f:\n",
     "    f.write(isvc)"
@@ -201,9 +256,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "question-answering",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "question-answering"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
