--- a/demos/rag-demos/question-answering/02.serve-vectorstore.ipynb
+++ b/demos/rag-demos/question-answering/02.serve-vectorstore.ipynb
@@ -29,7 +29,7 @@
     "predictor component. This involves creating a Docker image, which then serves as your ISVC endpoint. This approach\n",
     "grants you a high level of customization, ensuring the service fits your requirements. You can find the necessary code\n",
     "and the Dockerfile for this custom predictor in the `dockerfiles/vectorstore` directory. But for a quicker setup,\n",
-    "there's a pre-built option available: `dpoulopoulos/qna-vectorstore:v0.1.0`.\n",
+    "there's a pre-built option available: `dpoulopoulos/qna-vectorstore:v1.3.0-d79aa03`.\n",
     "\n",
     "## Table of Contents\n",
     "\n",
@@ -49,24 +49,25 @@
    "source": [
     "import os\n",
     "import base64\n",
+    "import requests\n",
     "import subprocess\n",
+    "import mlflow\n",
+    "import ipywidgets as widgets\n",
     "\n",
-    "import mlflow"
+    "from IPython.display import display"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d136311-4035-46b6-b17b-f946dd3d7ada",
+   "id": "418ebd17-e4b6-4b33-bf42-a54911da9954",
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"AWS_ACCESS_KEY_ID\"] = os.environ['MLFLOW_TRACKING_TOKEN']\n",
-    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = \"s3\"\n",
-    "os.environ[\"AWS_ENDPOINT_URL\"] = 'http://local-s3-service.ezdata-system.svc.cluster.local:30000'\n",
-    "os.environ[\"MLFLOW_S3_ENDPOINT_URL\"] = os.environ[\"AWS_ENDPOINT_URL\"]\n",
-    "os.environ[\"MLFLOW_S3_IGNORE_TLS\"] = \"true\"\n",
-    "os.environ[\"MLFLOW_TRACKING_INSECURE_TLS\"] = \"true\""
+    "# If you're running behind a proxy, set set your proxy URLs below. DO NOT edit the \"NO_PROXY\" variable unless you know what you're doing!\n",
+    "os.environ[\"HTTP_PROXY\"] = \"\"\n",
+    "os.environ[\"HTTPS_PROXY\"] = \"\"\n",
+    "os.environ[\"NO_PROXY\"] = \"10.96.0.0/12, .local\""
    ]
   },
   {
@@ -96,6 +97,84 @@
     "experiment. Ultimately, you retrieve the URI that points to this artifact's location and provide it to the custom\n",
     "predictor component. By doing this, the custom predictor component understands how to fetch the artifact and serve it\n",
     "effectively."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30f8d6ad-8e6e-4fb9-abf4-cdee7479d081",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add heading\n",
+    "heading = widgets.HTML(\"<h2>MLflow Credentials</h2>\")\n",
+    "display(heading)\n",
+    "\n",
+    "domain_input = widgets.Text(description='Username:', placeholder=\"i001ua.tryezmeral.com\")\n",
+    "username_input = widgets.Text(description='Username:')\n",
+    "password_input = widgets.Password(description='Password:')\n",
+    "submit_button = widgets.Button(description='Submit')\n",
+    "success_message = widgets.Output()\n",
+    "\n",
+    "domain = None\n",
+    "mlflow_username = None\n",
+    "mlflow_password = None\n",
+    "\n",
+    "def submit_button_clicked(b):\n",
+    "    global domain, mlflow_username, mlflow_password\n",
+    "    domain = domain_input.value\n",
+    "    mlflow_username = username_input.value\n",
+    "    mlflow_password = password_input.value\n",
+    "    with success_message:\n",
+    "        success_message.clear_output()\n",
+    "        print(\"Credentials submitted successfully!\")\n",
+    "    submit_button.disabled = True\n",
+    "\n",
+    "submit_button.on_click(submit_button_clicked)\n",
+    "\n",
+    "# Set margin on the submit button\n",
+    "submit_button.layout.margin = '20px 0 20px 0'\n",
+    "\n",
+    "# Display inputs and button\n",
+    "display(domain_input, username_input, password_input, submit_button, success_message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96c9910a-1261-47ae-a565-8bbe04c3262c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "token_url = f\"https://keycloak.{domain}/realms/UA/protocol/openid-connect/token\"\n",
+    "\n",
+    "data = {\n",
+    "    \"username\" : mlflow_username,\n",
+    "    \"password\" : mlflow_password,\n",
+    "    \"grant_type\" : \"password\",\n",
+    "    \"client_id\" : \"ua-grant\",\n",
+    "}\n",
+    "\n",
+    "token_responce = requests.post(token_url, data=data, allow_redirects=True, verify=False)\n",
+    "\n",
+    "token = token_responce.json()[\"access_token\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67b26f37-5fa5-4c67-a759-b4c67ee6b6c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ['MLFLOW_TRACKING_TOKEN'] = token\n",
+    "os.environ[\"AWS_ACCESS_KEY_ID\"] = os.environ['MLFLOW_TRACKING_TOKEN']\n",
+    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = \"s3\"\n",
+    "os.environ[\"AWS_ENDPOINT_URL\"] = 'http://local-s3-service.ezdata-system.svc.cluster.local:30000'\n",
+    "os.environ[\"MLFLOW_S3_ENDPOINT_URL\"] = os.environ[\"AWS_ENDPOINT_URL\"]\n",
+    "os.environ[\"MLFLOW_S3_IGNORE_TLS\"] = \"true\"\n",
+    "os.environ[\"MLFLOW_TRACKING_INSECURE_TLS\"] = \"true\"\n",
+    "os.environ[\"MLFLOW_TRACKING_URI\"] = \"http://mlflow.mlflow.svc.cluster.local:5000\""
    ]
   },
   {
@@ -166,12 +245,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76be7670-5333-41ec-a79b-fa3ae88f81fe",
+   "id": "af7fe62f-b809-4075-b479-254d2d10a1bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictor_image = (input(\"Enter the name of the predictor image (default: dpoulopoulos/qna-vectorstore:v0.1.0): \")\n",
-    "                   or \"dpoulopoulos/qna-vectorstore:v0.1.0\")"
+    "# Add heading\n",
+    "heading = widgets.HTML(\"<h2>Predictor Image</h2>\")\n",
+    "display(heading)\n",
+    "\n",
+    "predictor_image_widget = widgets.Text(\n",
+    "    description=\"Image Name:\",\n",
+    "    placeholder=\"dpoulopoulos/qna-vectorstore:v1.3.0-d79aa03\",\n",
+    "    layout=widgets.Layout(width='30%'))\n",
+    "submit_button = widgets.Button(description=\"Submit\")\n",
+    "success_message = widgets.Output()\n",
+    "\n",
+    "predictor_image = None\n",
+    "\n",
+    "def submit_button_clicked(b):\n",
+    "    global predictor_image\n",
+    "    predictor_image = predictor_image_widget.value\n",
+    "    with success_message:\n",
+    "        success_message.clear_output()\n",
+    "        if not predictor_image:\n",
+    "            predictor_image = \"dpoulopoulos/qna-vectorstore:v1.3.0-d79aa03\"\n",
+    "        print(f\"The name of the predictor image will be: '{predictor_image}'\")\n",
+    "    submit_button.disabled = True\n",
+    "\n",
+    "submit_button.on_click(submit_button_clicked)\n",
+    "\n",
+    "# Set margin on the submit button\n",
+    "submit_button.layout.margin = '20px 0 20px 0'\n",
+    "\n",
+    "# Display inputs and button\n",
+    "display(predictor_image_widget, submit_button, success_message)"
    ]
   },
   {
@@ -216,14 +323,14 @@
     "      - {3}\n",
     "      env:\n",
     "      # If you are running behind a proxy, uncomment the following lines and replace the values with your proxy URLs.\n",
-    "      # - name: HTTP_PROXY\n",
-    "      #   value: <your http proxy URL>\n",
-    "      # - name: HTTPS_PROXY\n",
-    "      #   value: <your https proxy URL>\n",
-    "      # - name: NO_PROXY\n",
-    "      #   value: .local\n",
-    "      - name: MLFLOW_S3_ENDPOINT_URL\n",
+    "      - name: HTTP_PROXY\n",
     "        value: {4}\n",
+    "      - name: HTTPS_PROXY\n",
+    "        value: {5}\n",
+    "      - name: NO_PROXY\n",
+    "        value: .local\n",
+    "      - name: MLFLOW_S3_ENDPOINT_URL\n",
+    "        value: {6}\n",
     "      - name: TRANSFORMERS_CACHE\n",
     "        value: /src\n",
     "      - name: SENTENCE_TRANSFORMERS_HOME\n",
@@ -240,7 +347,11 @@
     "            name: minio-secret\n",
     "\"\"\".format(encode_base64(os.environ[\"AWS_ACCESS_KEY_ID\"]),\n",
     "           encode_base64(os.environ[\"AWS_SECRET_ACCESS_KEY\"]),\n",
-    "           predictor_image, uri, os.environ[\"MLFLOW_S3_ENDPOINT_URL\"])\n",
+    "           predictor_image,\n",
+    "           uri,\n",
+    "           os.environ[\"HTTP_PROXY\"],\n",
+    "           os.environ[\"HTTPS_PROXY\"],\n",
+    "           os.environ[\"MLFLOW_S3_ENDPOINT_URL\"])\n",
     "\n",
     "with open(\"vectorstore-isvc.yaml\", \"w\") as f:\n",
     "    f.write(isvc)"
@@ -285,9 +396,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "question-answering",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "question-answering"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
