--- a/demos/rag-demos/question-answering/03.document-prediction.ipynb
+++ b/demos/rag-demos/question-answering/03.document-prediction.ipynb
@@ -37,8 +37,10 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "import requests"
+    "import requests\n",
+    "import ipywidgets as widgets\n",
+    "\n",
+    "from IPython.display import display"
    ]
   },
   {
@@ -68,6 +70,67 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c649eef7-b1ad-40a1-9b35-6ce785b925b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add heading\n",
+    "heading = widgets.HTML(\"<h2>Credentials</h2>\")\n",
+    "display(heading)\n",
+    "\n",
+    "domain_input = widgets.Text(description='Username:', placeholder=\"i001ua.tryezmeral.com\")\n",
+    "username_input = widgets.Text(description='Username:')\n",
+    "password_input = widgets.Password(description='Password:')\n",
+    "submit_button = widgets.Button(description='Submit')\n",
+    "success_message = widgets.Output()\n",
+    "\n",
+    "domain = None\n",
+    "username = None\n",
+    "password = None\n",
+    "\n",
+    "def submit_button_clicked(b):\n",
+    "    global domain, username, password\n",
+    "    domain = domain_input.value\n",
+    "    username = username_input.value\n",
+    "    password = password_input.value\n",
+    "    with success_message:\n",
+    "        success_message.clear_output()\n",
+    "        print(\"Credentials submitted successfully!\")\n",
+    "    submit_button.disabled = True\n",
+    "\n",
+    "submit_button.on_click(submit_button_clicked)\n",
+    "\n",
+    "# Set margin on the submit button\n",
+    "submit_button.layout.margin = '20px 0 20px 0'\n",
+    "\n",
+    "# Display inputs and button\n",
+    "display(domain_input, username_input, password_input, submit_button, success_message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1cb1b99-44a3-4453-8542-ccd1f5635b36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "token_url = f\"https://keycloak.{domain}/realms/UA/protocol/openid-connect/token\"\n",
+    "\n",
+    "data = {\n",
+    "    \"username\" : username,\n",
+    "    \"password\" : password,\n",
+    "    \"grant_type\" : \"password\",\n",
+    "    \"client_id\" : \"ua-grant\",\n",
+    "}\n",
+    "\n",
+    "token_responce = requests.post(token_url, data=data, allow_redirects=True, verify=False)\n",
+    "\n",
+    "token = token_responce.json()[\"access_token\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "173e2ebd-5e3b-4289-8358-9406ba816921",
    "metadata": {
     "tags": []
@@ -75,10 +138,10 @@
    "outputs": [],
    "source": [
     "DOMAIN_NAME = \"svc.cluster.local\"\n",
-    "NAMESPACE = os.environ['USER']\n",
+    "NAMESPACE = username\n",
     "DEPLOYMENT_NAME = \"vectorstore\"\n",
     "MODEL_NAME = DEPLOYMENT_NAME\n",
-    "SVC = f'{DEPLOYMENT_NAME}-predictor-default.{NAMESPACE}.{DOMAIN_NAME}'\n",
+    "SVC = f'{DEPLOYMENT_NAME}-predictor.{NAMESPACE}.{DOMAIN_NAME}'\n",
     "URL = f\"https://{SVC}/v1/models/{MODEL_NAME}:predict\"\n",
     "\n",
     "print(URL)"
@@ -100,7 +163,7 @@
     "  }]\n",
     "}\n",
     "\n",
-    "headers = {\"Authorization\": f\"Bearer {os.environ['AUTH_TOKEN']}\"}\n",
+    "headers = {\"Authorization\": f\"Bearer {token}\"}\n",
     "\n",
     "response = requests.post(URL, json=data, headers=headers, verify=False)"
    ]
@@ -137,9 +200,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "question-answering",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "question-answering"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
