demos/qna-gpu: Fix minor Notebook issues
Amend the Notebook files to:

* Create more generic endpoint URLs by replacing the hard-coded `bob`
  username with the one provided by the user as a variable.
* Remove unused imports.

Signed-off-by: Dimitris Poulopoulos <dimitris.poulopoulos@hpe.com>

--- a/demos/rag-demos/question-answering-gpu/05.question-answering.ipynb
+++ b/demos/rag-demos/question-answering-gpu/05.question-answering.ipynb
@@ -37,9 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
     "import json\n",
-    "import getpass\n",
     "import requests\n",
     "import ipywidgets as widgets\n",
     "\n",
@@ -129,7 +127,7 @@
    "outputs": [],
    "source": [
     "DOMAIN_NAME = \"svc.cluster.local\"  # change this to your domain for external access\n",
-    "NAMESPACE = \"bob\"\n",
+    "NAMESPACE = username\n",
     "DEPLOYMENT_NAME = \"ensemble\"\n",
     "MODEL_NAME = DEPLOYMENT_NAME\n",
     "SVC = f'{DEPLOYMENT_NAME}-transformer.{NAMESPACE}.{DOMAIN_NAME}'\n",
