--- a/demos/rag-demos/question-answering-gpu/03.document-prediction.ipynb
+++ b/demos/rag-demos/question-answering-gpu/03.document-prediction.ipynb
@@ -37,9 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
     "import json\n",
-    "import getpass\n",
     "import requests\n",
     "import ipywidgets as widgets\n",
     "\n",
@@ -141,7 +139,7 @@
    "outputs": [],
    "source": [
     "DOMAIN_NAME = \"svc.cluster.local\"\n",
-    "NAMESPACE = \"bob\"\n",
+    "NAMESPACE = username\n",
     "DEPLOYMENT_NAME = \"vectorstore-predictor\"\n",
     "MODEL_NAME = \"vectorstore\"\n",
     "SVC = f'{DEPLOYMENT_NAME}.{NAMESPACE}.{DOMAIN_NAME}'\n",
